# gorizont-web

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  lab1.js  package-lock.json  package.json
1/: package-lock.json  package.json  test.js
backend/: Cargo.toml
backend/migrations/2024-05-22-083002_create_posts/: up.sql
backend/migrations/2024-05-22-083009_create_users/: up.sql
backend/src/: main.rs  models.rs  schema.rs
backend/src/handlers/: auth.rs  posts.rs
backend/src/middleware/: auth_middleware.rs
docs/: tech-requirements.md  tech-task.md
src/: lib.rs
