[package]
name = "web-labs"
version = "0.1.0"
authors = ["Alexander Kalinich <hassiy@disroot.org>"]
edition = "2021"
repository = "https://github.com/HassiyYT/web-labs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
