[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "2.1.0", features = ["postgres"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
jsonwebtoken = "8"
bcrypt = "0.12"
uuid = { version = "1.0", features = ["serde"] }
actix-web-httpauth = "0.8.1"
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.30"
schema = "0.1.0"
